// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostThreadSpacer > PostThreadSpacer - Snapshots > matches snapshot 1`] = `
<div
  class="flex h-3"
  data-testid="container"
>
  <div
    class="w-3 border-l border-border"
    data-testid="container"
  />
  <div
    class="flex-1"
    data-testid="container"
  />
</div>
`;

exports[`PostThreadSpacer > PostThreadSpacer - Snapshots > matches snapshot with data-testid 1`] = `
<div
  class="flex h-3"
  data-testid="spacer"
>
  <div
    class="w-3 border-l border-border"
    data-testid="container"
  />
  <div
    class="flex-1"
    data-testid="container"
  />
</div>
`;
